--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>docsify-demo</title>
+  <title>LinuxWin🍉</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport"
@@ -17,8 +17,8 @@
   <script src="//unpkg.com/docsify-edit-on-github/index.js"></script>
   <script>
     window.$docsify = {
-      name: 'docsify-demo',
-      repo: 'https://github.com/Snailclimb/JavaGuide-Interview',
+      name: 'LinuxWin🍉',
+      repo: 'https://github.com/LinuxWin232/LinuxWin232.github.io',
       maxLevel: 5,//最大支持渲染的标题层级
       subMaxLevel: 3,
       homepage: 'README.md',
