--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
   <script src="//unpkg.com/docsify/lib/plugins/zoom-image.js"></script>
   <!-- 字数统计 -->
   <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
+  <script src="https://unpkg.com/docsify-plugin-flexible-alerts"></script>
 </body>
-  font-family: "LXGW WenKai Screen",sans-serif;
 </html>
