--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script src="//unpkg.com/docsify-edit-on-github/index.js"></script>
   <script>
     window.$docsify = {
+      font-family: "LXGW WenKai", sans-serif,
       name: 'LinuxWin🍉',
       repo: 'https://github.com/LinuxWin232/LinuxWin232.github.io',
       maxLevel: 5,//最大支持渲染的标题层级
