--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <link rel="shortcut icon" href="/img/tx.png" />
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">加载中</div>
   <!-- docsify-edit-on-github -->
   <script src="//unpkg.com/docsify-edit-on-github/index.js"></script>
   <script>
+    font-family: "LXGW WenKai", sans-serif;
     window.$docsify = {
-      font-family: "LXGW WenKai", sans-serif,
       name: 'LinuxWin🍉',
       repo: 'https://github.com/LinuxWin232/LinuxWin232.github.io',
       maxLevel: 5,//最大支持渲染的标题层级
