--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <script src="//unpkg.com/docsify-edit-on-github/index.js"></script>
   <script>
     window.$docsify = {
+      onlyCover: false,
+      themeColor: '#7287fd',
       name: 'LinuxWin🍉',
       repo: 'https://github.com/LinuxWin232/LinuxWin232.github.io',
       maxLevel: 5,//最大支持渲染的标题层级
