--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
       plugins: [
         EditOnGithubPlugin.create('https://github.com/LinuxWin232/LinuxWin232.github.io/blob/master/')
       ],
+      footer: {
+        copy: '<span>Copyright &copy; 2024.7.1 &nbsp 💖 &nbsp</span>',
+        auth: ' <strong><a href="https://github.com/LinuxWin232/LinuxWin232.github.io.git" target="_blank">LinuxWin</a></strong>',
+        pre: '<hr/>',
+        style: 'font-size: 18px; text-align: center;',
+      },
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
@@ -53,5 +59,7 @@
   <!-- 字数统计 -->
   <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
   <script src="https://unpkg.com/docsify-plugin-flexible-alerts"></script>
+  <!-- 页脚 -->
+  <script src="//unpkg.com/docsify-footer-enh/dist/docsify-footer-enh.min.js"></script>
 </body>
 </html>
