--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script src="//unpkg.com/docsify-edit-on-github/index.js"></script>
   <script>
     window.$docsify = {
-      onlyCover: false,
+      onlyCover: true,
       themeColor: '#7287fd',
       name: 'LinuxWin🍉',
       repo: 'https://github.com/LinuxWin232/LinuxWin232.github.io',
