--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
-  <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/lxgw-wenkai-webfont/1.6.0/style.min.css" />
-  <link rel="stylesheet" href="/styles/font.css">
+  <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">加载中</div>
   <!-- docsify-edit-on-github -->
   <script src="//unpkg.com/docsify-edit-on-github/index.js"></script>
   <script>
@@ -62,5 +61,6 @@
   <script src="https://unpkg.com/docsify-plugin-flexible-alerts"></script>
   <!-- 页脚 -->
   <script src="//unpkg.com/docsify-footer-enh/dist/docsify-footer-enh.min.js"></script>
+  <script defer src="/styles/cursor.js"></script>
 </body>
 </html>
