--- a/index.html
+++ b/index.html
@@ -62,5 +62,8 @@
   <!-- 页脚 -->
   <script src="//unpkg.com/docsify-footer-enh/dist/docsify-footer-enh.min.js"></script>
   <script defer src="/styles/cursor.js"></script>
+  <script defer type="text/javascript" src="https://cdn1.tianli0.top/npm/sweetalert2@8.19.0/dist/sweetalert2.all.js"></script>
+  <script defer src="/styles/lunar.js"></script>
+  <script defer src="/styles/day.js"></script>
 </body>
 </html>
