--- a/index.html
+++ b/index.html
@@ -65,5 +65,6 @@
   <script defer type="text/javascript" src="https://cdn1.tianli0.top/npm/sweetalert2@8.19.0/dist/sweetalert2.all.js"></script>
   <script defer src="/styles/lunar.js"></script>
   <script defer src="/styles/day.js"></script>
+  <script async src="https://npm.elemecdn.com/tzy-blog/lib/js/other/sakura.js"></script>
 </body>
 </html>
