--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
   <link rel="stylesheet" href="/styles/style.css">
+  <span id="fps"></span>
 </head>
 <body>
   <div id="app">加载中</div>
@@ -66,5 +67,6 @@
   <script defer src="/styles/lunar.js"></script>
   <script defer src="/styles/day.js"></script>
   <script async src="https://npm.elemecdn.com/tzy-blog/lib/js/other/sakura.js"></script>
+  <script async src="/js/fps.js"></script>
 </body>
 </html>
