--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="/styles/style.css">
   <link rel="stylesheet" href="/styles/progress_bar.css" media="defer" onload="this.media='all'">
   <link rel="stylesheet" href="/styles/font.css">
+  <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/lxgw-wenkai-webfont/1.6.0/style.min.css" />
 </head>
 <body>
   <div id="app">加载中</div>
